sending token using jwt

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,2 @@
 DB_URL = mongodb+srv://mohitsahu1993:mohitsahu1993@cluster0.6b8zhc2.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRETKEY = "dfbgjluigfvsd"
