--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.1",
-    "nodemon": "^2.0.22"
+    "nodemailer": "^6.9.4",
+    "nodemon": "^2.0.22",
+    "sparkpost": "^2.1.4"
   }
 }
