--- a/Backend/.env
+++ b/Backend/.env
@@ -2,3 +2,4 @@ DB_URL = mongodb+srv://mohitsahu1993:mohitsahu1993@cluster0.6b8zhc2.mongodb.net/
 JWT_SECRETKEY = "dfbgjluigfvsd"
 Mailkey = "dkscxqlpmbdsmsrg"
 MailId = "mohitsahujbp@gmail.com"
+PORT = 5000
